<resources>
    <string name="app_name">ЧСН</string>
    <string name="yes">Да</string>
    <string name="login">Войти</string>
    <string name="logout">Выход</string>
    <string name="skip">Пропустить</string>
    <string name="share">Поделиться</string>
    <string name="icon">icon</string>
    <string name="male">Парень</string>
    <string name="female">Девушка</string>
    <string name="search">Найти</string>
    <string name="hidden">Скрыто</string>
    <string name="contacts">Позвать друзей</string>
    <string name="settings">Настройки</string>
    <string name="notifications">Уведомления</string>
    <string name="secondary">Школа</string>
    <string name="high">Универ</string>
    <string name="invite">Позвать</string>
    <string name="go_on">Поехали!</string>


    <string name="enter_phone_title">Твой номер телефона</string>
    <string name="default_country_code">+7</string>
    <string name="enter_auth_code_explanation">Мы выслали код\nна номер: %s</string>
    <string name="sms_code_repeat_countdown">Повторная отправка кода через %d сек.</string>
    <string name="enter_sms_code">Введите код из СМС</string>
    <string name="error_wrong_sms_code">Введите корректный код</string>

    <string name="contacts_permission_explanation">Приложение не может работать без доступа к контактам</string>
    <string name="storage_permission_explanation">Ну очень надо</string>

    <string name="notifications_answers">Новые лайки</string>
    <string name="notifications_alerts">События</string>

    <string name="now">сейчас</string>
    <string name="now_past">только что</string>
    <!--two days ago-->
    <string name="before_yesterday" translatable="true">позавчера</string>
    <string name="yesterday">вчера</string>
    <string name="today">сегодня</string>
    <string name="today_capitalized">Сегодня</string>
    <string name="tomorrow">завтра</string>
    <string name="after_tomorrow">послезавтра</string>
    <string name="this_week">на этой неделе</string>
    <string name="next_week">на следующей неделе</string>
    <string name="this_month">в этом месяце</string>
    <string name="calendar_day_format_1">%1$d %2$s</string>
    <string name="calendar_day_format_2">%1$s, %2$d %3$s</string>
    <string name="calendar_week_format_1">с %1$d по %2$d %3$s</string>
    <string name="calendar_week_format_2">с %1$d %2$s по %3$d %4$s</string>
    <string name="relative_date_format_without_time">%1$s %2$s</string>
    <string name="relative_date_format">%1$s в %2$s</string>
    <string name="relative_date_format_today">в %s</string>
    <string name="smart_time_format_ago">%1$s назад</string>
    <string name="smart_time_format_h_m_ago">%1$s %2$s назад</string>

    <plurals name="smart_time_units_ms">
        <item quantity="one">%d миллисекунду</item>
        <item quantity="few">%d миллисекунды</item>
        <item quantity="many">%d миллисекунд</item>
        <item quantity="other">%d миллисекунд</item>
    </plurals>
    <plurals name="smart_time_units_s">
        <item quantity="one">%d секунду</item>
        <item quantity="few">%d секунды</item>
        <item quantity="many">%d секунд</item>
        <item quantity="other">%d секунд</item>
    </plurals>
    <string name="smart_time_units_1_m_genitive">минуту</string>
    <plurals name="smart_time_units_m">
        <item quantity="one">%d минуту</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
    <string name="smart_time_units_1_h_genitive">час</string>
    <plurals name="smart_time_units_h">
        <item quantity="one">%d час</item>
        <item quantity="few">%d часа</item>
        <item quantity="many">%d часов</item>
        <item quantity="other">%d часов</item>
    </plurals>

    <string name="smart_time_units_1_d_genitive">день</string>
    <string name="login_phone_error">Введите корректный мобильный номер</string>
    <string name="age_grade6">6 класс</string>
    <string name="age_grade7">7 класс</string>
    <string name="age_grade8">8 класс</string>
    <string name="age_grade9">9 класс</string>
    <string name="age_grade10">10 класс</string>
    <string name="age_grade11">11 класс</string>
    <string name="age_year1">1 курс</string>
    <string name="age_year2">2 курс</string>
    <string name="age_year3">3 курс</string>
    <string name="age_year4">4 курс</string>
    <string name="age_year5">5 курс</string>
    <string name="age_year6">6 курс</string>
    <string name="age_superstar">Не известно</string>

    <string name="age_profile_grade6">Класс: 6</string>
    <string name="age_profile_grade7">Класс: 7</string>
    <string name="age_profile_grade8">Класс: 8</string>
    <string name="age_profile_grade9">Класс: 9</string>
    <string name="age_profile_grade10">Класс: 10</string>
    <string name="age_profile_grade11">Класс: 11</string>
    <string name="age_profile_year1">Курс: 1</string>
    <string name="age_profile_year2">Курс: 2</string>
    <string name="age_profile_year3">Курс: 3</string>
    <string name="age_profile_year4">Курс: 4</string>
    <string name="age_profile_year5">Курс: 5</string>
    <string name="age_profile_year6">Курс: 6</string>
    <string name="age_profile_superstar">Не известно</string>

    <string name="gender_unknown">Не указан</string>
    <string name="importDb">Импорт БД</string>
    <string name="copy_fcm">Скопировать FCM-токен</string>
    <string name="title_number_of_questions">Количество вопросов за один подход</string>
    <string name="title_stopscreen_duation">Пауза между подходами</string>
    <string name="title_invite_trigger">Показать вопрос-инвайт после вопроса</string>
    <string name="title_emulate_slow_connection">Имитировать медленную сеть</string>
    <string name="title_age">Где ты сейчас учишься?</string>
    <string name="message_enter_phone_number">Мы вышлем тебе бесплатную смс с кодом, чтобы зарегистрировать в приложении</string>
    <string name="title_age_high">На каком курсе ты учишься?</string>
    <string name="message_empty_answers">Здесь будут лайки от твоих друзей. Хочешь лайки? Зови друзей!</string>
    <string name="message_privacy">Продолжая, вы соглашаетсясь с политикой конфиденциальности</string>
    <string name="title_gender">Твой пол?</string>
    <string name="title_permission">Отлично! Осталось чуть-чуть..</string>
    <string name="subtitle_permission">Чтобы найти твоих друзей нужен доступ к адресной книге.</string>
    <string name="button_permission">Включить контакты</string>
    <string name="title_age_secondary">В каком классе ты учишься?</string>
    <string name="field_gender">Пол:</string>
    <string name="field_likes">Собрано лайков</string>
    <string name="field_support">Написать разработчику</string>
    <string name="field_vk">Группа в ВК</string>
    <string name="field_clear_answers">Удалить ответы</string>
    <string name="title_welcome">Узнай, кому ты нравишься</string>
    <string name="subtitle_welcome">Отвечай анонимно на вопросы про друзей. Они узнают, что ты думаешь о них, но не будут знать, кто это!</string>
    <string name="title_sms_code">Введи код из смс</string>
    <string name="message_wrong_auth_code">Упс!… Код неверный!</string>
    <string name="button_edit_phone">Ошиблись номером?</string>
    <string name="button_repeat_auth_code">Отправить еще раз?</string>
    <string name="message_stopscreen">Новые вопросы\nбудут через:\n%s</string>
    <string name="message_skip_stopscreen">Хочешь быстрее?</string>
    <string name="button_invite">Пригласить друга</string>
    <string name="title_question_invite">Party time!</string>
    <string name="button_continue">Нажми для продолжения</string>
    <string name="invite_subtitle">Мы отправим им приглашения. Они не узнают, кто их позвал.</string>
    <string name="error_common">Что-то пошло не так</string>
    <string name="delete_answers_success_message">Ответы удалены</string>
    <string name="contest">Конкурс!</string>

    <plurals name="days">
        <item quantity="one">%d\u00A0день</item>
        <item quantity="few">%d\u00A0дня</item>
        <item quantity="many">%d\u00A0дней</item>
        <item quantity="other">%d\u00A0дней</item>
    </plurals>

    <plurals name="hours">
        <item quantity="one">%d\u00A0час</item>
        <item quantity="few">%d\u00A0часа</item>
        <item quantity="many">%d\u00A0часов</item>
        <item quantity="other">%d\u00A0часов</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="one">%1$d\u00A0минута</item>
        <item quantity="few">%1$d\u00A0минуты</item>
        <item quantity="many">%1$d\u00A0минут</item>
        <item quantity="other">%1$d\u00A0минут</item>
    </plurals>

    <string-array name="months_nominative">
        <item>январь</item>
        <item>февраль</item>
        <item>март</item>
        <item>апрель</item>
        <item>май</item>
        <item>июнь</item>
        <item>июль</item>
        <item>август</item>
        <item>сентябрь</item>
        <item>октябрь</item>
        <item>ноябрь</item>
        <item>декабрь</item>
    </string-array>

    <string-array name="months_genitive">
        <item>января</item>
        <item>февраля</item>
        <item>марта</item>
        <item>апреля</item>
        <item>мая</item>
        <item>июня</item>
        <item>июля</item>
        <item>августа</item>
        <item>сентября</item>
        <item>октября</item>
        <item>ноября</item>
        <item>декабря</item>
    </string-array>

    <string-array name="calendar_groups">
        <item>Сегодня, %1$d %2$s</item>
        <item>Завтра, %1$d %2$s</item>
        <item>На этой неделе</item>
        <item>На следующей неделе</item>
        <item>В этом месяце</item>
        <item>В январе</item>
        <item>В феврале</item>
        <item>В марте</item>
        <item>В апреле</item>
        <item>В мае</item>
        <item>В июне</item>
        <item>В июле</item>
        <item>В августе</item>
        <item>В сентябре</item>
        <item>В октябре</item>
        <item>В ноябре</item>
        <item>В декабре</item>
    </string-array>

    <string-array name="week_days">
        <item>воскресенье</item>
        <item>понедельник</item>
        <item>вторник</item>
        <item>среда</item>
        <item>четверг</item>
        <item>пятница</item>
        <item>суббота</item>
    </string-array>

    <string-array name="week_days_prepositional">
        <item>в воскресенье</item>
        <item>в понедельник</item>
        <item>во вторник</item>
        <item>в среду</item>
        <item>в четверг</item>
        <item>в пятницу</item>
        <item>в субботу</item>
    </string-array>
</resources>
