<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f8f8f8"
        android:orientation="vertical"
        tools:context=".ui.settings.SettingsActivity"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/icon"
                android:padding="8dp"
                android:src="@drawable/ic_arrow_back"
                android:tint="@color/mw_fade_black_80"
                tools:ignore="RtlHardcoded"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginEnd="48dp"
                android:gravity="center"
                android:text="@string/settings"
                android:textAppearance="@style/SubtitleTextAppearance"
                android:textStyle="bold"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#9ab3c0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="24dp"
            android:drawableStart="@drawable/ic_cellphone"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            android:text="@string/notifications"
            android:textAppearance="@style/TitleTextAppearance"
            android:textColor="#546d79"
            />

        <Switch
            android:id="@+id/notifications_answers"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height_small"
            android:foreground="@drawable/ripple_rect_view_light"
            android:paddingEnd="24dp"
            android:paddingStart="62dp"
            android:text="@string/notifications_answers"
            android:textAppearance="@style/SubtitleTextAppearance"
            android:textColor="#546d79"
            tools:ignore="RtlHardcoded"/>

        <Switch
            android:id="@+id/notifications_alerts"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height_small"
            android:foreground="@drawable/ripple_rect_view_light"
            android:paddingEnd="24dp"
            android:paddingStart="62dp"
            android:text="@string/notifications_alerts"
            android:textAppearance="@style/SubtitleTextAppearance"
            android:textColor="#546d79"
            tools:ignore="RtlHardcoded"/>

        <TextView
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height_small"
            android:background="@drawable/ripple_rect_view_light"
            android:clickable="true"
            android:drawablePadding="14dp"
            android:drawableStart="@drawable/ic_exit"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            android:text="@string/logout"
            android:textAppearance="@style/SubtitleTextAppearance"
            android:textColor="#546d79"
            tools:ignore="RtlHardcoded"/>

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height_small"
            android:gravity="center_vertical"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            android:textAppearance="@style/SubtitleTextAppearance"
            android:textColor="#546d79"
            tools:ignore="RtlHardcoded"
            tools:text="Версия: 1.1 (1)"/>

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#546d79"/>

        <Spinner
            android:id="@+id/api"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height_small"
            />

        <TextView
            android:id="@+id/import_db"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height_small"
            android:background="@drawable/ripple_rect_view_light"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            android:text="@string/importDb"
            android:textAppearance="@style/SubtitleTextAppearance"
            android:textColor="#546d79"
            tools:ignore="RtlHardcoded"/>

        <TextView
            android:id="@+id/copy_fcm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height_small"
            android:background="@drawable/ripple_rect_view_light"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            android:text="@string/copy_fcm"
            android:textAppearance="@style/SubtitleTextAppearance"
            android:textColor="#546d79"
            tools:ignore="RtlHardcoded"/>

        <LinearLayout
            android:id="@+id/questions_frame_size_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_rect_view_light"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/title_number_of_questions"/>

            <EditText
                android:id="@+id/questions_frame_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:hint="1-100"
                android:inputType="numberDecimal"
                tools:ignore="HardcodedText"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/questions_dead_time_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_rect_view_light"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/title_stopscreen_duation"/>

            <EditText
                android:id="@+id/questions_dead_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:inputType="numberDecimal"
                tools:ignore="LabelFor"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/invite_threshold_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_rect_view_light"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/title_invite_trigger"/>

            <EditText
                android:id="@+id/invite_threshold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:inputType="numberDecimal"
                tools:ignore="LabelFor"/>
        </LinearLayout>


        <CheckedTextView
            android:id="@+id/emulate_slow_connection"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height_small"
            android:background="@drawable/ripple_rect_view_light"
            android:checkMark="@drawable/ic_check"
            android:checked="false"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/indent"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            android:paddingTop="@dimen/indent"
            android:text="@string/title_emulate_slow_connection"/>
    </LinearLayout>
</ScrollView>
