<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stopscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:theme="@style/AppThemeDark"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clipToPadding="false"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/indent"
            android:src="@drawable/ic_stopscreen"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/indent"
            android:gravity="center_horizontal"
            android:text="@string/message_stopscreen"
            android:textAppearance="@style/QuestionTextAppearance"
            android:lineSpacingExtra="2sp"
            android:textStyle="bold"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/indent"
            android:layout_marginTop="40dp"
            android:text="@string/message_skip_stopscreen"
            android:textAppearance="@style/SubtitleTextAppearance"
            android:textStyle="bold"
            />


        <FrameLayout
            android:id="@+id/contacts"
            style="@style/VariantButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/variant_button_height"
            android:layout_marginBottom="@dimen/variant_button_intent"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:focusable="true"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"

            android:background="@drawable/bg_white_button"
            >

            <TextView
                android:id="@+id/contactsText"
                style="@style/VariantButtonText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_invite"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/button_invite"
                android:textColor="#000000"
                />

        </FrameLayout>

    </LinearLayout>
</FrameLayout>
