<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:theme="@style/AppThemeDark"
    tools:background="#7030a0">


    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="100dp"
        android:paddingTop="100dp"
        app:layout_constraintBottom_toTopOf="@id/variants_anchor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="@dimen/question_icon_size"
            android:layout_height="@dimen/question_icon_size"
            android:layout_marginBottom="@dimen/indent"
            android:padding="@dimen/question_icon_padding"
            android:scaleType="fitXY"
            android:src="@drawable/ic_stopscreen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/icon"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:textAppearance="@style/QuestionTextAppearance"
        android:visibility="invisible"
        tools:text="С кем хотел бы отправиться в путешествие?"
        tools:visibility="visible"
        />

    <View
        android:id="@+id/variants_anchor"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="272dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <include layout="@layout/inc_variants"/>

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/padding"
        android:text="@string/invite_subtitle"
        android:gravity="center_horizontal"
        android:textAppearance="@style/SubtitleTextAppearance"
        android:textColor="@color/mw_fade_white_70"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/variant4"
        tools:ignore="UnknownIdInLayout"/>

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="@dimen/padding"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:background="@drawable/ripple_none_view_dark"
        android:gravity="center"
        android:text="@string/skip"
        android:textAppearance="@style/SubtitleTextAppearance"
        android:textColor="@color/mw_fade_white_70"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/shuffle"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="@dimen/padding"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:foreground="@drawable/ripple_circle_icon_dark"
        android:gravity="center"
        android:text="Перемешать"
        android:textAppearance="@style/SubtitleTextAppearance"
        android:textColor="@color/mw_fade_white_70"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>